@@ -12,8 +12,10 @@
 
 noinst_LIBRARIES = libtxi.a
 
-AM_CPPFLAGS = -I$(top_srcdir)/gnulib/lib -I$(top_builddir)/gnulib/lib
-DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
+AM_CPPFLAGS = -I$(top_srcdir)			\
+  -I$(top_srcdir)/gnulib/lib			\
+  -I$(top_builddir)/gnulib/lib			\
+  -DLOCALEDIR=\"$(localedir)\"
 
 libtxi_a_SOURCES = substring.c system.h xexit.c
 
